tests/codegen/compile/runtime/fail/missing_case_theory_attr.stderr
error: No case attribute supplied to generate the tests.
  --> $DIR/missing_case_theory_attr.rs:9:1
   |
9  | #[runtime::test(executor = "async_std", kind = "theory")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Add #[case(usize, usize)] above:
  --> $DIR/missing_case_theory_attr.rs:10:1
   |
10 | async fn runtime_attribute_test_should_add_the_test_attribute(a: usize, b: usize) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
